# azerax-_backend_project

./: .env.example  .gitignore  Cargo.toml  Dockerfile  test.sh
migrations/: 0001_initial.sql
src/: main.rs
src/db/: mod.rs
src/handlers/: auth.rs  books.rs  mod.rs  news.rs  orders.rs  users.rs
src/middleware/: auth.rs
src/models/: mod.rs
src/routes/: mod.rs
src/utils/: email.rs  errors.rs  jwt.rs  mod.rs  password.rs
