[package]
name = "aezarx-backend"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "aezarx-backend"
path = "src/main.rs"

[dependencies]
axum        = { version = "0.8.6", features = ["multipart", "macros"] }
axum-extra  = { version = "0.12.3", features = ["typed-header"] }
tower       = "0.5.1"
tower-http  = { version = "0.6.4", features = ["cors", "trace", "fs"] }
tokio       = { version = "1",   features = ["full"] }

sqlx = { version = "0.8.5", features = [
    "postgres", "runtime-tokio-rustls",
    "uuid", "chrono", "migrate", "bigdecimal"
] }

serde      = { version = "1", features = ["derive"] }
serde_json = "1"

jsonwebtoken = { version = "10", features = ["rust_crypto"] }
argon2       = "0.5"
rand = "0.8"
hex          = "0.4"

lettre = { version = "0.11", features = [
    "tokio1", "tokio1-native-tls", "smtp-transport", "builder"
] }

thiserror = "2.0.17"
anyhow    = "1"

tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

uuid       = { version = "1", features = ["v4", "serde"] }
chrono     = { version = "0.4", features = ["serde"] }
dotenvy    = "0.15"
once_cell  = "1"
tokio-util = { version = "0.7", features = ["io"] }

[profile.release]
opt-level     = 3
lto           = true
codegen-units = 1
